--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section id="top-section">
+        <div class="adjust-container text-container">
+            <h1><span class="blue-color">Eat</span> a healthy meal, <br> to help your body heal!</h1>
+            <p class="top-section-paragraph">Food network serve you healthy and delicious food to keep you fit. You don't need to take the pressure of diet. Give us the chance to take care of your food habit and we will take care of it.</p>
+            <a class="food-network-button" href="https://diettogo.com/" target="_blank">Order Food</a>
+        </div>
+        <div class="adjust-container image-container">
+            <img src="/images/healthy food healthy life.png" alt="healthy food healthy life">
+        </div>
+    </section>
 </body>
 </html>
