image problem solving1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="food-network-button" href="https://diettogo.com/" target="_blank">Order Food</a>
         </div>
         <div class="adjust-container image-container">
-            <img src="/images/healthy food healthy life.png" alt="healthy food healthy life">
+            <img src="images/healthy food healthy life.png" alt="healthy food healthy life">
         </div>
     </section>
 </body>
