about me section added

--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
 </head>
 <body>
     <section id="top-section">
-        <div class="adjust-container text-container">
-            <h1><span class="blue-color">Eat</span> a healthy meal, <br> to help your body heal!</h1>
-            <p class="top-section-paragraph">Food network serve you healthy and delicious food to keep you fit. You don't need to take the pressure of diet. Give us the chance to take care of your food habit and we will take care of it.</p>
-            <a class="food-network-button" href="https://diettogo.com/" target="_blank">Order Food</a>
+        <div class="container">
+            <div class="inner-container text-container">
+                <h1><span class="blue-color">Eat</span> a healthy meal, <br> to help your body heal!</h1>
+                <p class="top-section-paragraph">Food network serve you healthy and delicious food to keep you fit. You don't need to take the pressure of diet. Give us the chance to take care of your food habit and we will take care of it.</p>
+                <a class="food-network-button" href="https://diettogo.com/" target="_blank">Order Food</a>
+            </div>
+            <div class="inner-container image-container">
+                <img src="images/healthy food healthy life.png" alt="healthy food healthy life">
+            </div>
         </div>
-        <div class="adjust-container image-container">
-            <img src="images/healthy food healthy life.png" alt="healthy food healthy life">
+    </section>
+    <section id="about-me">
+        <div class="container">
+            <div class="inner-container about-me-image-container">
+                <img src="images/Person Image.png" alt="">
+            </div>
+            <div class="inner-container about-me-text-container">
+                <h2>About Me</h2>
+                <p>Hi, I am Jon Doe. I'm the founder and the head Cook of Food Network. Cooking is my passion since my childhood. I love to cook delicious and healthy food for people. My main goal is to serve healthy food which will be good for our health. Eating food should be enjoyable and I focus on it most.</p>
+                <a href="https://diettogo.com/" target="_blanks" class="food-network-button">Contact Me</a>
+            </div>
         </div>
     </section>
 </body>
