basic design has done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section id="top-section">
-        <div class="container">
+        <div class="flexible-container">
             <div class="inner-container text-container">
                 <h1><span class="blue-color">Eat</span> a healthy meal, <br> to help your body heal!</h1>
                 <p class="top-section-paragraph">Food network serve you healthy and delicious food to keep you fit. You don't need to take the pressure of diet. Give us the chance to take care of your food habit and we will take care of it.</p>
@@ -24,7 +24,7 @@
         </div>
     </section>
     <section id="about-me">
-        <div class="container">
+        <div class="flexible-container">
             <div class="inner-container about-me-image-container">
                 <img src="images/Person Image.png" alt="">
             </div>
@@ -35,5 +35,54 @@
             </div>
         </div>
     </section>
+    <section id="my-recipies">
+        <div class="recipie-container">
+            <div class="recipie-text-container">
+                <h2>My recipies</h2>
+                <p>We serve best healthy and delicious recipies in the town.<br> We belive that healthy meal help to heal your body.</p>
+            </div>
+            <div class="recipie-boxes-container">
+                <div class="single-recipie">
+                    <img src="images/Project-Cover8.png" alt="masala channa">
+                    <h3>Masala Channa</h3>
+                    <p>This bowlful of mouth watering masala channa is topped with tadka aloo. You can either pair it with pooris, chapati or even steamed rice.</p>
+                </div>
+                <div class="single-recipie">
+                    <img src="images/Project-Cover7.png" alt="Vegetarian Khao Suey">
+                    <h3>Vegetarian Khao Suey</h3>
+                    <p>Khao Suey is a one-pot meal with noodles and veggies cooked in coconut milk and garnished with peanuts and fried garlic.</p>
+                </div>
+                <div class="single-recipie">
+                    <img src="images/Project-Cover5.png" alt="Taco salad">
+                    <h3>Taco Salad</h3>
+                    <p>Mexican flavours added to this salad make it super delicious and a healthy option to eat at any point of the day.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="counter">
+        <div class="flexible-container counter-container">
+            <div class="counter-item">
+                <h3>700k</h3>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="counter-item">
+                <h3>2.4m</h3>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="counter-item">
+                <h3>100k</h3>
+                <p>Dribble Shot Likes</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="flexible-container">
+            <div class="footer-contents">
+                <h2><span class="blue-color">FOOD</span> NETWORK</h2>
+                <p>If you are gonna protect the environment, save a life, eat healthy</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
