--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section id="about-me">
         <div class="flexible-container">
             <div class="inner-container about-me-image-container">
-                <img src="images/Person Image.png" alt="">
+                <img src="images/Person Image.png" alt="rebecca">
             </div>
             <div class="inner-container about-me-text-container">
                 <h2>About Me</h2>
-                <p>Hi, I am Jon Doe. I'm the founder and the head Cook of Food Network. Cooking is my passion since my childhood. I love to cook delicious and healthy food for people. My main goal is to serve healthy food which will be good for our health. Eating food should be enjoyable and I focus on it most.</p>
+                <p>Hi, I am Rebecca. I'm the founder and the CEO of Food Network. Cooking is my passion since my childhood. I love to cook delicious and healthy food for people. My main goal is to serve healthy food which will be good for our health. Eating food should be enjoyable and I focus on it most.</p>
                 <a href="https://diettogo.com/" target="_blanks" class="food-network-button">Contact Me</a>
             </div>
         </div>
@@ -73,6 +73,50 @@
             <div class="counter-item">
                 <h3>100k</h3>
                 <p>Dribble Shot Likes</p>
+            </div>
+        </div>
+    </section>
+    <section id="our-team">
+        <div class="our-team-container">
+            <div class="our-team-heading">
+                <h2>Our Team</h2>
+            </div>
+            <div class="team-members">
+                <div class="team-member-profile">
+                    <img src="images/team-04.jpg" alt="Rebecca">
+                    <h3>Rebecca</h3>
+                    <p>Rebecca is the Founder and CEO of Food Network</p>
+                </div>
+                <div class="team-member-profile">
+                    <img src="images/team-03.jpg" alt="peter">
+                    <h3>Peter</h3>
+                    <p>Peter is the Head of Food Network's Supply Chain</p>
+                </div>
+                <div class="team-member-profile">
+                    <img src="images/team-02.jpg" alt="jara">
+                    <h3>Jara</h3>
+                    <p>Jara is our leading Customer Care specialist.</p>
+                </div>
+                <div class="team-member-profile">
+                    <img src="images/team-01.jpg" alt="williamson">
+                    <h3>williamson</h3>
+                    <p>williamson is our #1 expert in Sales Management.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="flexible-container">
+            <div class="inner-container contact-texts">
+                <h2>get in touch with us</h2>
+                <p>Subscribe to our newsletter and get exiciting offers from us.</p>
+            </div>
+            <div class="inner-container contact-form">
+                <form>
+                    <input class="email-input" type="email" placeholder="Your Email">
+                    <br>
+                    <input class="food-network-button subscribe" type="submit" value="Subscribe">
+                </form>
             </div>
         </div>
     </section>
